fixed button placement on smaller screens

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main ul {
 /* back button */
 button.back-button {
     position: absolute;
-    left: 40%;
+    left: 10%;
 }
 
 /* clear button */
